--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -207,6 +207,12 @@ section {
     display: block;
 }
 
+.login>div>span {
+    font-size: 20px;
+    font-weight: normal;
+    line-height: 1.5;
+}
+
 .login>div>form>input {
     border: 1px solid #e0e0e0;
     border-radius: 5px;
@@ -216,6 +222,55 @@ section {
     background-position: 25px center;
     margin-bottom: 15px;
     font-size: 15px;
+}
+
+.forgot {
+    text-align: center;
+    background: transparent url(../images/bg.png) repeat center top;
+    min-height: calc(100vh - 55px);
+    max-width: 100% !important;
+}
+
+.forgot>div {
+    margin: 3% auto;
+    max-width: 500px;
+    border: 1px solid #ccc;
+    padding-bottom: 25px;
+    background-color: #fff;
+}
+
+.forgot>div>img {
+    max-width: 100%;
+    margin-left: 44px;
+}
+
+.forgot>div>* {
+    display: block;
+}
+
+.forgot>div>span {
+    font-size: 20px;
+    font-weight: normal;
+    line-height: 1.5;
+}
+
+.forgot>div>form>input {
+    border: 1px solid #e0e0e0;
+    border-radius: 5px;
+    height: 48px;
+    padding: 0 50px;
+    background-repeat: no-repeat;
+    background-position: 25px center;
+    margin-bottom: 15px;
+    font-size: 15px;
+}
+
+.show-pass {
+    padding: 0 50px;
+    margin-bottom: 15px;
+    display: block;
+    font-size: 15px;
+    margin-right: 150px;
 }
 
 .btn {
@@ -231,6 +286,7 @@ section {
     max-width: 100%;
     cursor: pointer;
 }
+
 .btn:hover {
     background-color: #8f8f8f;
 }
@@ -250,6 +306,18 @@ section {
 }
 
 .create-account span {
+    color: #288ad6;
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+.login-account {
+    color: rgb(120, 120, 120);
+    font-size: 13px;
+    margin: 10px 0px 0px;
+}
+
+.login-account span {
     color: #288ad6;
     margin-left: 5px;
     cursor: pointer;
@@ -306,4 +374,628 @@ section {
 .social .social-item img {
     width: 58px;
     cursor: pointer;
+}
+
+.cart {
+    text-align: center;
+    background: transparent url(../images/bg.png) repeat center top;
+    min-height: calc(100vh - 55px);
+    max-width: 100% !important;
+}
+
+.cart>div {
+    margin: 3% auto;
+    max-width: 600px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+}
+
+
+.list-cart {
+    display: flex;
+    flex-flow: column wrap;
+    list-style-type: none;
+}
+
+.list-cart .product-item {
+    padding: 10px 30px;
+    width: 100%;
+}
+
+.list-cart .product-item:not(:first-child) {
+    border-top: 1px solid #e1e1e1;
+}
+
+.list-cart .product-item .img-product {
+    float: left;
+    width: 16%;
+}
+
+.list-cart .img-product a,
+.list-cart .img-product a img {
+    display: block;
+    overflow: hidden;
+}
+
+.list-cart .img-product a img {
+    width: 75px;
+    margin: auto;
+}
+
+.list-cart .img-product button {
+    display: block;
+    overflow: hidden;
+    margin: 15px auto 0;
+    border: 0;
+    background: #fff;
+    color: #999;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.list-cart .product-item .info-product {
+    display: block;
+    margin-left: 95px;
+}
+
+.list-cart .info-product .name-price {
+    display: block;
+}
+
+.list-cart .name-price a {
+    float: left;
+    width: 70%;
+    font-size: 14px;
+    color: #333;
+    font-weight: 700;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.list-cart .name-price span {
+    float: right;
+    color: #f30c28;
+    font-size: 14px;
+    text-align: right;
+    margin-bottom: 2px;
+}
+
+.list-cart .name-price del {
+    display: block;
+    overflow: hidden;
+    color: #666;
+}
+
+.total-provisional {
+    display: block;
+    overflow: hidden;
+    padding: 10px 30px;
+    font-size: 14px;
+}
+
+.total-provisional>span {
+    float: left;
+    color: #333;
+}
+
+.total-provisional>span:nth-child(2) {
+    float: right;
+}
+
+.info-customer {
+    display: block;
+    overflow: hidden;
+    border-top: 1px solid #d1d1d1;
+    padding: 10px 30px 0;
+}
+
+.info-customer h4 {
+    display: block;
+    overflow: hidden;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #333;
+    text-align: left;
+}
+
+.info-customer .form-customer,
+.texterror {
+    display: block !important;
+}
+
+.info-customer .form-customer {
+    display: none;
+    overflow: hidden;
+    padding: 10px 0 0;
+}
+
+.form-customer .sex-customer {
+    display: block;
+    overflow: hidden;
+    text-align: left;
+}
+
+.form-customer .sex-customer input {
+    text-align: left;
+}
+
+.form-customer .name-phone-address-customer {
+    display: block;
+    overflow: hidden;
+    padding: 10px 0;
+}
+
+.form-customer .name-phone-address-customer .name {
+    float: left;
+    width: 49%;
+    margin: 0 1% 0 0;
+}
+
+.form-customer .name-phone-address-customer .name input {
+    display: block;
+    overflow: hidden;
+    border: 1px solid #d1d1d1;
+    border-radius: 4px;
+    padding: 10px;
+    color: #333;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.form-customer .fillinform .fillname:nth-child(2) {
+    float: right;
+    margin-right: 0;
+}
+
+.form-customer .name-phone-address-customer .address {
+    float: left;
+    width: 99%;
+    margin: 0 1% 0 0;
+    padding-top: 5px;
+}
+
+.note {
+    display: block;
+    overflow: hidden;
+    padding: 10px 30px;
+    border-bottom: 1px solid #d1d1d1;
+}
+
+.note h4 {
+    display: block;
+    overflow: hidden;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #333;
+    text-align: left;
+}
+
+.note textarea {
+    display: block;
+    overflow: hidden;
+    border: 1px solid #d1d1d1;
+    border-radius: 4px;
+    padding: 10px;
+    color: #333;
+    box-sizing: border-box;
+    width: 99%;
+    resize: none;
+    height: 100px;
+    margin-top: 10px;
+}
+
+.finaltotal {
+    display: block;
+    overflow: visible;
+    padding: 20px 30px;
+    position: relative;
+}
+
+.area-total, .area-total .discountcode {
+    display: block;
+    overflow: visible;
+}
+
+.area-total .discountcode {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.area-total .discountcode .usecode.singlebox {
+    min-height: auto;
+}
+.area-total .discountcode .usecode.coupon-code {
+    margin-right: 10px;
+}
+.area-total .discountcode .usecode {
+    position: relative;
+    padding: 10px;
+    cursor: pointer;
+    width: calc(50% - 5px);
+    border-radius: 4px;
+    text-align: left;
+    border: 1px solid #e0e0e0;
+    display: flex;
+    align-items: center;
+    min-height: 58px;
+}
+
+.area-total .discountcode .usecode .usecode-icon {
+    display: flex;
+    justify-content: center;
+    width: 23px;
+    flex-direction: row-reverse;
+}
+
+.area-total .discountcode .usecode.singlebox .usecode-title {
+    margin-right: 25px;
+}
+.area-total .discountcode .usecode span {
+    display: inline-block;
+    vertical-align: middle;
+    overflow: hidden;
+    font-size: 14px;
+    margin-left: 10px;
+    text-align: left;
+}
+.area-total .discountcode .usecode.coupon-code.active:before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    border-top: 1px solid #f1f1f1;
+    border-right: 1px solid #f1f1f1;
+    background: #f1f1f1;
+    transform: rotate(
+-45deg);
+    display: block;
+    position: absolute;
+    bottom: -18px;
+    left: 85px;
+}
+
+.area-total .discountcode .usecode.coupon-code.active:after {
+    transform: rotate(
+180deg);
+}
+.area-total .discountcode .usecode.coupon-code:after {
+    content: "";
+    border-top: 6px solid #000;
+    border-right: 6px solid transparent;
+    border-left: 6px solid transparent;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 auto;
+    position: absolute;
+    right: 10px;
+}
+
+.area-total .discountcode .applycode {
+    display: none;
+    overflow: hidden;
+    background: #f1f1f1;
+    padding: 12px;
+}
+
+.area-total .discountcode .applycode.active {
+    display: block;
+    margin: 10px 0;
+}
+div.clr {
+    clear: both;
+}
+.area-total .discountcode .applycode input {
+    float: left;
+    width: 74%;
+    border: 1px solid #c6c6c6;
+    border-radius: 4px;
+    padding: 10px;
+    text-indent: 5px;
+    color: #666;
+}
+.area-total .discountcode .applycode button.disabled {
+    border: 1px solid #bdbdbd;
+    background: #bdbdbd;
+    color: #fff;
+}
+.area-total .discountcode .applycode button {
+    float: right;
+    width: 20%;
+    border: 1px solid #288ad6;
+    background: #288ad6;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.disabled {
+    pointer-events: none !important;
+}
+
+.area-total .line-break {
+    border-top: 1px solid #d1d1d1;
+    position: absolute;
+    width: calc(100% + 60px);
+    left: -30px;
+    bottom: -20px;
+}
+.area-total .total-price {
+    display: block;
+    overflow: hidden;
+    padding: 10px 0 10px;
+    width: 100%;
+    font-size: 14px;
+}
+
+.area-total .total-price strong {
+    float: left;
+    color: #333;
+}
+
+.area-total .total-price strong:nth-child(2) {
+    float: right;
+    color: #f30c28;
+}
+
+.finaltotal button.submitorder {
+    display: block;
+    overflow: hidden;
+    color: #fff;
+    text-align: center;
+    height: 50px;
+    margin: 10px auto;
+    width: 100%;
+    border-radius: 4px;
+    border: 0;
+    cursor: pointer;
+    background: #000;
+}
+.finaltotal button.submitorder:hover {
+    background: #8f8f8f;
+}
+.banner {
+    margin-top: 0;
+    background-color: #fff;
+    display: flex;
+}
+.banner section{
+    display: flex;
+    padding-top: 10px;
+}
+section {
+    max-width: 1200px;
+    width: 100%;
+    min-width: 980px;
+    position: relative;
+}
+.carousel {
+    width: 100%;
+    -webkit-tap-highlight-color: transparent;
+    position: relative;
+    z-index: 1;
+}
+.slider-banner{
+    max-width: 800px;
+    max-height: 205px;
+    padding-top: 5px;
+    overflow: hidden;
+}
+.carousel {
+    display: block !important;
+}
+
+.carousel .stage-outer {
+    position: relative;
+    overflow: hidden;
+    -webkit-transform: translate3d(0,0,0);
+}
+
+.slider-banner .stage-outer {
+    max-height: 205px;
+}
+
+.carousel .stage {
+    position: relative;
+    touch-action: manipulation;
+}
+
+.carousel .banner-item {
+    position: relative;
+    min-height: 1px;
+    float: left;
+    -webkit-backface-visibility: hidden;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.slider-banner .item:first-child {
+    display: flex;
+    height: 100%;
+}
+
+.slider-banner .item a {
+    display: flex;
+    height: 100%;
+    text-decoration: none;
+}
+
+.carousel .stage:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+}
+
+.theme .nav {
+    margin-top: 10px;
+    text-align: center;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.carousel .nav button.btn-prev, .carousel .nav button.btn-next, .carousel button.dot {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0 !important;
+    font: inherit;
+}
+
+.slider-banner .nav button {
+    opacity: .4;
+}
+
+.carousel .btn-prev {
+    box-shadow: 6px 0 4px rgb(0 0 0 / 5%), 4px 0 4px rgb(0 0 0 / 9%);
+    left: 0;
+}
+
+.carousel .btn-next {
+    box-shadow: -6px 0 4px rgb(0 0 0 / 5%), -4px 0 4px rgb(0 0 0 / 9%);
+    right: 0;
+}
+
+.nav button {
+    background: rgba(255,255,255,.9) !important;
+    height: 60px;
+    width: 30px;
+    position: absolute;
+    top: 48%;
+    transform: translateY(-50%);
+    z-index: 2;
+}
+
+.nav button span {
+    display: block;
+    text-indent: -9999px;
+}
+
+.nav button.btn-prev span::before {
+    left: 10px;
+    transform: rotate(-135deg);
+}
+
+.nav button span::before {
+    border-top: 3px solid #666;
+    border-right: 3px solid #666;
+    content: '';
+    height: 22px;
+    position: absolute;
+    top: 18px;
+    width: 22px;
+}
+
+.theme .nav [class*='btn-'] {
+    color: #fff;
+    font-size: 14px;
+    margin: 5px;
+    padding: 4px 7px;
+    background: #d6d6d6;
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+.nav button.btn-next span::before {
+    transform: rotate(45deg);
+    right: 8px;
+}
+
+.carousel:hover button {
+    opacity: 1;
+}
+
+.carousel button {
+    opacity: .3;
+}
+
+.theme .nav [class*='btn-']:hover {
+    background: #869791;
+    color: #fff;
+    text-decoration: none;
+}
+
+.theme .dots {
+    text-align: center;
+    -webkit-tap-highlight-color: transparent;
+    background: transparent !important;
+    margin-bottom: 0 !important;
+}
+
+.slider-banner .dots {
+    bottom: 2px;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+}
+
+.theme .dots .dot {
+    display: inline-block;
+    zoom: 1;
+}
+
+.theme .dots .dot span {
+    background: #d6d6d6;
+    display: block;
+    -webkit-backface-visibility: visible;
+    transition: opacity 200ms ease;
+    border-radius: 30px;
+}
+
+.theme .dots .dot.active span, .theme .dots .dot:hover span {
+    background: #869791;
+}
+
+.slider-banner .dots button.active span {
+    background-color: #fe7705 !important;
+}
+
+.theme .dots .dot span {
+    display: block;
+    -webkit-backface-visibility: visible;
+    transition: opacity 200ms ease;
+    border-radius: 30px;
+}
+
+.slider-banner .dots button span {
+    height: 5px !important;
+    width: 5px !important;
+    margin: 2px 0 0 7px !important;
+}
+
+.right-banner {
+    display: grid;
+    max-height: 210px;
+    align-content: space-between;
+    align-self: flex-end;
+    padding-top: 5px;
+    overflow: hidden;
+    padding-left: 10px;
+    width: 33.33%;
+}
+
+.right-banner-item:first-child {
+    margin-bottom: 0;
+}
+
+.right-banner a {
+    line-height: 0;
+}
+
+.right-banner-item {
+    display: block;
+}
+
+.right-banner a img {
+    max-height: 95px;
+    width: 100%;
+    object-fit: fill;
+    border: 0;
+}
+
+.right-banner-item {
+    margin-bottom: 10px;
 }
