cap nhat ngay 8/7/2022

--- a/public/assets/user/css/style.css
+++ b/public/assets/user/css/style.css
@@ -14492,6 +14492,7 @@ section.wrapper {
     line-height: 22px;
     color: #333;
     padding: 10px;
+    text-align: justify;
 }
 
 .ordercontent .info-order {
